# hello-vnf

./: Makefile  README.md
app/: CMakeLists.txt  Makefile.mk  version.h.in
app/etc/: hello.conf
app/misc/: CMakeLists.txt  Dockerfile.alpine  Dockerfile.ubuntu  helloctl
